--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Project</title>
 </head>
 <body>
-    <h1>รายงานยอดขาย</h1>
+    <h1>ข้อมูลขายสินค้า</h1>
+    <p>รายงานยอดขขายในแต่ละเดือน</p>
 </body>
 </html>
