--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 <body>
     <h1>ข้อมูลขายสินค้า</h1>
     <p>รายงานยอดขายสินค้าในแต่ละเดือน</p>
+    <p>รายงานยอดขายสินค้าในแต่ละเดือน</p>
+    <p>รายงานยอดขายสินค้าในแต่ละเดือน</p>
 </body>
 </html>
